--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .Content {
   border: 4px solid red;
   display: flex;
-  align-items: center;
+  align-items: top;
   justify-content: space-around;
 }
 
@@ -19,7 +19,6 @@ body {
   /*height: 70vh;*/
   display:flex;
   flex-direction: column;
-  height: 100%;
 }
 
 .Left{
@@ -38,9 +37,11 @@ body {
   flex: 1;
 }
 
-section{
-  display:flex;
-
+.Center section {
+  display: flex;
+  flex-direction: row;
+  align-items: top;
+  justify-content: space-around;
 }
 p{
   font-size: 14px;
