--- a/style.css
+++ b/style.css
@@ -21,10 +21,13 @@ body {
   flex-direction: column;
 }
 
-.Left{
+.Left, .Content > div.Left{
   border-color: #adf442;
   display: flex;
   flex: 1;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  justify-content: flex-start;
 }
 .Center{
   border-color: blue;
@@ -45,4 +48,18 @@ body {
 }
 p{
   font-size: 14px;
+}
+
+.small-image{
+  display:flex;
+  flex: 0 1 auto;
+  max-height: 50px;
+}
+.Left p{
+  display:flex;
+}
+.flex-break{
+  display: flex;
+  width: 100%;
+  flex: 0 1 auto;
 }
