--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@ body {
 }
 #navBar {
   border: 4px solid black;
-  height: 30vh;
+  height: 20vh;
   line-height: 45px;
+  padding: 2.5vh;
+  display:flex;
+  position: relative;
 }
 
 .Content {
@@ -63,4 +66,27 @@ p{
   display: flex;
   width: 100%;
   flex: 0 1 auto;
+}
+.fa-globe{
+  font-size: 18vh;
+}
+#welcomeMsg{
+  font-size: 37px;
+}
+#welcomeMsg > span{
+  padding-left: 10vh;
+  font-style: italic;
+  font-size: 60px;
+}
+/*
+#myAccount {
+  margin-left:50vh;
+  border: 2px solid black;
+  flex-grow: 8;
+}*/
+
+.myAccountBlock{
+  position: absolute;
+  bottom: 2.5vh;
+  right: 2.5vh;
 }
