--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body {
   font-size: 30px;
+  margin: 0;
+  padding: 0;
 }
 #navBar {
-  border: 4px solid black;
   height: 20vh;
   line-height: 45px;
   padding: 2.5vh;
   display:flex;
   position: relative;
+  background-image: url(https://www.steigenberger.com/cache/images/022_SHR_mnchen_resta_b505a027250022d5ad887f6-1-1-1-1.jpg);
+  color: white;
+  text-shadow: 2px 2px #000000, -2px -2px #000000;
 }
 
 .Content {
@@ -33,10 +37,22 @@ body {
   align-content: flex-start;
   justify-content: flex-start;
 }
+
+.small-image img {
+  padding: 4px;
+  border-radius: 8px;
+}
+
 .Center{
   border-color: blue;
   display: flex;
   flex: 3;
+  padding: 4px;
+  border-radius: 8px;
+}
+
+.Center .imgStyled > img {
+  border-radius: 10px;
 }
 .Right{
   border-color: yellow;
