--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 }
 #navBar {
   height: 20vh;
-  line-height: 45px;
   padding: 2.5vh;
   display:flex;
   position: relative;
@@ -15,22 +14,22 @@ body {
 }
 
 .Content {
-  border: 4px solid red;
+  /*border: 4px solid red;*/
   display: flex;
   align-items: top;
   justify-content: space-around;
 }
 
 .Content > div{
-  border-width: 4px;
+  /*border-width: 4px;
   border-style: solid;
-  /*height: 70vh;*/
+  height: 70vh;*/
   display:flex;
   flex-direction: column;
 }
 
 .Left, .Content > div.Left{
-  border-color: #adf442;
+  /*border-color: #adf442;*/
   display: flex;
   flex: 1;
   flex-flow: row wrap;
@@ -87,22 +86,45 @@ p{
   font-size: 18vh;
 }
 #welcomeMsg{
-  font-size: 37px;
+  font-size: 7.5vh;
 }
 #welcomeMsg > span{
   padding-left: 10vh;
   font-style: italic;
-  font-size: 60px;
+  font-size: 11.5vh;
 }
-/*
+
 #myAccount {
-  margin-left:50vh;
-  border: 2px solid black;
-  flex-grow: 8;
-}*/
+  padding: 5px;
+}
 
 .myAccountBlock{
   position: absolute;
   bottom: 2.5vh;
   right: 2.5vh;
+}
+
+@media screen and (max-width: 700px){
+  #navBar {
+    height: 10vh;
+    padding: 1.25vh;
+  }
+  .myAccountBlock{
+    position: absolute;
+    bottom: 1.25vh;
+    right: 1.25vh;
+    font-size: 6vh;
+  }
+  #welcomeMsg {
+      font-size: 3.75vh;
+  }
+  #welcomeMsg > span {
+      padding-left: 5vh;
+      font-style: italic;
+      font-size: 5.25vh;
+  }
+  .fa-globe {
+    font-size: 9vh;
+
+  }
 }
